<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".atractii.mytown.aventuraParc.mytown.EchipamentAventuraFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/echipament_instructaj" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DFF7DEA9"
            android:fontFamily="times new roman"
            android:padding="8dp"
            android:text="Echipament și Instructaj"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DFF7DEA9"
                    android:fontFamily="times new roman"
                    android:paddingLeft="16dp"
                    android:text="Echipament"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DFF7DEA9"
                    android:padding="6dp"
                    android:text="@string/echipament_aventura"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DFF7DEA9"
                    android:fontFamily="times new roman"
                    android:paddingLeft="16dp"
                    android:text="Instructaj "
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DFF7DEA9"
                    android:padding="6dp"
                    android:text="@string/instructaj_aventura"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DFF7DEA9"
                    android:fontFamily="times new roman"
                    android:paddingLeft="16dp"
                    android:text="Cerințe către utilizatori "
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DFF7DEA9"
                    android:padding="6dp"
                    android:text="@string/cerinte_aventura"

                    android:textColor="#000"
                    android:textSize="18sp" />


            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</FrameLayout>