<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".atractii.mytown.piscina.mytown.DetaliiPiscinaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="Detalii tehnice"
            android:background="@drawable/new_background"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/piscina_arinis_cover"
            android:paddingBottom="4dp"
            android:layout_marginBottom="4dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:padding="4dp"
                    android:text="Detalii tehnice piscina acoperită:"
                    android:fontFamily="times new roman"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detaliiT_piscina_acop"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:textColor="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:padding="4dp"
                    android:text="Detalii tehnice piscina descoperită pentru adulţi:"
                    android:fontFamily="times new roman"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detaliiT_piscina_descopAdulti"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:textColor="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:padding="4dp"
                    android:text="Detalii tehnice piscina descoperită pentru copii:"
                    android:fontFamily="times new roman"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detaliiT_piscina_descopCopii"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:textColor="#000"/>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>